// This is your Prisma schema file

generator client {
  provider                  = "prisma-client"
  output                    = "../src/generated/prisma"
  runtime                   = "nodejs"
  moduleFormat              = "esm"
  generatedFileExtension    = "ts"
  importFileExtension       = "js"
}

datasource db {
  provider = "postgresql"
}

model User {
  id            String   @id @default(uuid())
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  snowflakeUser String   @unique
  workflows Workflow[]
  secrets Secret[]
  workflowRuns WorkflowRun[]
  slackUsers SlackUser[]
}

model SlackUser {
    id            String   @id @default(uuid())
    slackUserId   String            // Slack's user ID (e.g., U012AB3CD)
    slackTeamId   String            // Slack workspace ID (e.g., T012AB3CD)
    slackUsername String?           // Slack username for display purposes
    userId        String
    user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
    createdAt     DateTime @default(now())
    updatedAt     DateTime @updatedAt

    @@unique([slackUserId, slackTeamId])
    @@index([userId])
}

enum WorkflowVisibility {
    Private
    Public
}

model Workflow {
    id String @id @default(uuid())
    name String? // Optional human-readable name for the workflow (multiple IDs can share a name = versions)
    storagePath String // the directory on disk (block storage volume) where workflow artifacts are stored
    ownerId String
    owner User @relation(fields: [ownerId], references: [id])
    createdAt DateTime @default(now())
    updatedAt DateTime @default(now())
    visibility WorkflowVisibility @default(Private)
    runs WorkflowRun[]

    @@index([name, ownerId, createdAt(sort: Desc)]) // For efficient latest-version-by-name lookup
}

enum LogSource {
    RuntimeHost      // Logs from the runtime host process
    WorkflowNode     // Logs from workflow node execution
    ToolCall         // Logs from tool/function calls
}

enum WorkflowRunStatus {
    Running          // Workflow is currently executing
    Completed        // Workflow finished successfully
    Failed           // Workflow finished with an error
    Cancelled        // Workflow was manually cancelled
    Interrupted      // Workflow is paused waiting for human input
}

model WorkflowRun {
    id          String            @id @default(uuid())
    workflowId  String
    workflow    Workflow          @relation(fields: [workflowId], references: [id], onDelete: Cascade)
    userId      String
    user        User              @relation(fields: [userId], references: [id])
    startedAt   DateTime          @default(now())
    completedAt DateTime?
    exitCode    Int?
    status      WorkflowRunStatus @default(Running)
    result      Json?             // Workflow result payload (persisted for async polling)
    logs        Log[]
    interrupts  WorkflowInterrupt[]

    @@index([workflowId])
    @@index([userId])
    @@index([status])
}

model Log {
    id          String    @id @default(uuid())
    runId       String
    run         WorkflowRun @relation(fields: [runId], references: [id], onDelete: Cascade)
    workflowId  String    // Denormalized for efficient querying
    userId      String    // Denormalized for RBAC filtering
    source      LogSource
    message     String
    attributes  Json      @default("{}")  // Custom key-value attributes
    timestamp   DateTime  @default(now())

    @@index([runId])
    @@index([workflowId])
    @@index([userId])
    @@index([timestamp])
}

enum SecretType {
    Secret      // Regular secret (default)
    OAuth       // OAuth token
}

model Secret {
  id        String     @id @default(uuid())
  name      String
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  ownerId   String
  owner     User       @relation(fields: [ownerId], references: [id])
  secret    String
  type      SecretType @default(Secret)
  // tags
  // TODO: sharing

  @@unique([ownerId, name])
}

enum InterruptStatus {
    Pending          // Waiting for human input
    Resumed          // Human provided input, workflow resumed
    Expired          // Interrupt timed out or was cancelled
}

model WorkflowInterrupt {
    id          String          @id @default(uuid())
    runId       String
    run         WorkflowRun     @relation(fields: [runId], references: [id], onDelete: Cascade)
    workflowId  String          // Denormalized for efficient querying
    payload     Json            // The interrupt payload (question, form data, etc.)
    nodeId      String?         // Optional node identifier for debugging
    status      InterruptStatus @default(Pending)
    response    Json?           // The human's response (populated when resumed)
    createdAt   DateTime        @default(now())
    resumedAt   DateTime?       // When the interrupt was resumed

    @@index([runId])
    @@index([workflowId])
    @@index([status])
}